Fix cropped text for no movie in a cinema

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -448,6 +448,11 @@ li.selected {
     position: relative;
 }
 
+.box-none {
+    overflow: hidden;
+    position: relative;
+}
+
 .box .box-img {
     width: 100%;
     height: 270px;
